<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="enter_your_login_name">Enter your login name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_username_field">"Username"</string>
    <string name="login_password_field">"Password"</string>
    <string name="FMS">"Finance Management System"</string>
    <string name="cat">"Categories"</string>
    <string name="users">"Users"</string>
    <string name="all_users">"All Users"</string>
    <string name="exit">"Exit"</string>
    <string name="delete">"Delete"</string>
    <string name="add">"Add"</string>
    <string name="update">"Update"</string>
    <string name="expenses">"Expenses"</string>
    <string name="incomes">"Incomes"</string>
    <string name="finance">"Finance"</string>


</resources>