<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ListView
            android:id="@+id/incomeList"
            android:layout_width="342dp"
            android:layout_height="392dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.863" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/incomes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/incomeTextView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            tools:ignore="UnknownId"/>
    <Button
            android:id="@+id/logOutBtn"
            android:layout_width="116dp"
            android:layout_height="51dp"
            android:onClick="logOut"
            android:text="@string/exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.763"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/categoriesBtn" android:layout_marginTop="164dp"/>
    <Button
            android:id="@+id/categoriesBtn"
            android:layout_width="116dp"
            android:layout_height="51dp"
            android:onClick="goToCategories"
            android:text="@string/cat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.756" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.241" android:layout_marginTop="164dp"
            app:layout_constraintEnd_toStartOf="@+id/expensesBtn"/>
    <Button
            android:id="@+id/expensesBtn"
            android:layout_width="116dp"
            android:layout_height="51dp"
            android:onClick="goToExpense"
            android:text="@string/expenses"
            app:layout_constraintVertical_bias="0.259"
            app:layout_constraintBottom_toTopOf="@+id/incomeList" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.392" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/logOutBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>