<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesActivity">

    <Button
            android:id="@+id/usersBtn"
            android:layout_width="116dp"
            android:layout_height="51dp"
            android:onClick="goToUsers"
            android:text="@string/users"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.486"
            tools:ignore="OnClick" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.101"/>
    <ListView
            android:id="@+id/categoryList"
            android:layout_width="350dp"
            android:layout_height="442dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.842"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="184dp"
            android:layout_height="50dp"
            android:text="Categories:"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@+id/categoryList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.825"/>
    <Button
            android:id="@+id/logOutBtn"
            android:layout_width="116dp"
            android:layout_height="51dp"
            android:layout_marginBottom="31dp"
            android:onClick="logOut"
            android:text="@string/exit"
            app:layout_constraintBottom_toTopOf="@+id/categoryList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.791"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.327" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/finance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/goToExpensesBtn"
            android:onClick="goToExpenses" tools:ignore="MissingConstraints"
            app:layout_constraintHorizontal_bias="0.714" app:layout_constraintVertical_bias="0.608"
            app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintTop_toBottomOf="@+id/logOutBtn"
            app:layout_constraintBottom_toTopOf="@+id/categoryList"/>

</androidx.constraintlayout.widget.ConstraintLayout>